# o1js

./: .dockerignore  .envrc  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .oxlintrc.json  .prettierignore  .prettierrc.cjs  .prettierrc.js  .prettierrc.md.cjs  404.html  AGENT.md  AGENT_LOG.md  ARCHITECTURAL_SURGERY_REPORT.md  BACKEND_SWITCHING_IMPLEMENTATION.md  BACKEND_SWITCHING_WORKING.md  BAD_CRYPTO.md  BENCHMARK_UPDATE.md  BLARG.md  BOOLEAN_INVESTIGATION_RESULTS.md  BOOLEAN_SEMANTIC_OPTIMIZE.md  BREAKTHROUGH.md  BUG.md  BUGS.md  BUILD_PERFORMANCE_REPORT.md  BUILD_SYSTEM_SPARKY_UPDATE.md  CALLGRAPH_CONSTRAINTS.md  CHANGELOG-v2.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CODEOWNERS  COMPACTION.md  COMPARISON.md  COMPREHENSIVE_GATE_TESTING_ACHIEVEMENTS.md  COMPREHENSIVE_PBT_IMPLEMENTATION.md  COMPREHENSIVE_PERFORMANCE_ANALYSIS.md  COMPREHENSIVE_TEST_FAILURE_REPORT.md  (+952 more)
.claude/: settings.local.json
.clinic/: long.clinic-flame.html  medium.clinic-flame.html
.config/: cspell.json
.github/: copilot-instructions.md  dependabot.yml
.husky/: pre-commit
2.4.0/: index.html
assets/: highlight.css  search.js
benchmark/: README.md  base-benchmark.ts  benchmark.ts  tsconfig.json  types.d.ts
benchmarks/: benchmark.ts  ecdsa.ts  tsconfig.json
changelog/: index.html
classes/: AccountPredicate.html  AccountUpdate.html  AccumulatorMembershipProof.html  Body.html  Bool.html  Character.html  Circuit.html  CircuitString.html  CircuitValue.html  ClosedInterval.html  Collection.html  DataStore.Keyed.html  EndoScalar.html  EpochDataPredicate.html  EpochLedgerPredicate.html  Events.html  Experimental.html  Field.html  Group.html  IndexBase.html  IndexedAccumulator.html  Int64.html  Keypair.html  Ledger.html  MerkleList.html  MerkleMap.html  MerkleMapWitness.html  MerkleStack.html  MerkleTree.html  Optional.html  OrIgnore.html  Party.html  PartyBalance.html  Perm.html  Permissions.html  PrivateKey.html  Proof.html  ProofWithInput.html  ProtocolStatePredicate.html  PublicKey.html  (+21 more)
constraint-comparison/: complex_circuit.json  multiplication.json  simple_addition.json
constraint-export-success/: addition.json  boolean_ops.json  complex.json  empty.json  multiplication.json  single_constraint.json
constraint-exports-fixed/: summary.json
constraint-format-test/: sparky-manual.json
crypto/: bigint-helpers.ts  bigint.unit-test.ts  bindings-bigint256.ts  bindings-conversion-base.ts  bindings-conversion-proof.ts  bindings-conversion.ts  bindings-curve.ts  bindings-field.ts  bindings-kimchi-types.ts  bindings-lookup.ts  bindings-util.ts  bindings-vector.ts  bindings.ts  constants.ts  dune  elliptic_curve.ts  elliptic_curve.unit-test.ts  finite-field.unit-test.ts  finite_field.ts  poseidon.ts  poseidon.unit-test.ts
crypto/test_vectors/: dump-test-vectors.sh  dune  poseidonKimchi.ts  poseidonLegacy.ts
docs/: beautiful-zkp-idea.md  dependent-types-idea.yml  introspector-idea.md
examples/: api_exploration.ts  ex00_preimage.ts  ex04_signed_message.ts  exchange.ts  exchange_lib.ts  matrix_mul.ts  multisig.ts  verify-optimization.ts  wip.ts
functions/: Account.html  Bool-1.html  Encoding.bytesFromFields.html  Encoding.bytesToFields.html  Encoding.stringFromFields.html  Encoding.stringToFields.html  Encryption.decrypt.html  Encryption.encrypt.html  Experimental.MerkleWitness.html  Experimental.Reducer.html  Experimental.ZkProgram.html  Experimental.accountUpdateFromCallback.html  Experimental.asFieldsAndAux-1.html  Experimental.createChildAccountUpdate.html  Experimental.createChildParty.html  Experimental.makeChildAccountUpdate.html  Experimental.makeChildParty.html  Experimental.memoizeWitness.html  Experimental.packToFields.html  Experimental.partyFromCallback.html  Field-1.html  Group-1.html  MerkleWitness.html  Mina.BerkeleyQANet.html  Mina.LocalBlockchain.html  Mina.Network.html  Mina.accountCreationFee.html  Mina.createTransaction.html  Mina.currentSlot.html  Mina.currentTransaction-1.html  Mina.faucet.html  Mina.fetchActions.html  Mina.fetchEvents.html  Mina.filterGroups.html  Mina.getAccount.html  Mina.getActions.html  Mina.getBalance.html  Mina.getNetworkState.html  Mina.getProofsEnabled.html  Mina.hasAccount.html  (+47 more)
interfaces/: Account.html  AsFieldElements.html  Body.html  CircuitMain.html  ClosedInterval_.html  DataStore.DataStore-1.html  DataStore.KeyedDataStore.html  EpochDataPredicate_.html  EpochLedgerPredicate_.html  FeePayerParty.html  FeePayerPartyBody.html  FeePayerParty_.html  FullAccountPredicate_.html  Int64_.html  MerkleTree.html  Mina.Transaction.html  Mina.TransactionId.html  OrIgnore_.html  Parties.html  Parties_.html  PartyBody.html  PartyUpdate.html  Party_.html  Permissions.html  Permissions_.html  ProtocolStatePredicate_.html  Provable.html  ProvablePure.html  SetOrKeep_.html  SnappAccount.html  UInt32_.html  UInt64_.html  ZkappAccount.html
js/: proxy.js  snarky-class-spec.js  wrapper.d.ts  wrapper.js  wrapper.web.js
ocaml/: dune  overrides.js  snarky_js_constants.ml
ocaml/lib/: consistency_test.ml  dune  local_ledger.ml  pickles_bindings.ml  pickles_bindings.mli  snarky_bindings.ml  snarky_bindings.mli  snarky_js_bindings_lib.ml  snarky_js_bindings_lib.mli  util.ml
scripts/prepublish/native/: prepublish-native-package.opam  prepublish-native-package.sh  prepublish-native-package.ts
src/bindings/crypto/test-vectors/: dump-test-vectors.sh  dune  poseidon-kimchi.ts  poseidon-legacy.ts
src/bindings/ocaml/: dune  dune-project  o1js_constants.ml
src/bindings/ocaml/jsoo_exports/: dune  overrides.js
src/bindings/ocaml/lib/: consistency_test.ml  dune  local_ledger.ml  pickles_bindings.ml  pickles_bindings.mli  snarky_bindings.ml  snarky_bindings.mli
src/js_crypto/: bigint-helpers.ts  bigint256.ts  constants.ts  dump-test-vectors.sh  dune  elliptic_curve.ts  elliptic_curve.unit-test.ts  finite-field.unit-test.ts  finite_field.ts  non-negative.ts  poseidon.ts  poseidon.unit-test.ts  poseidonKimchiTestVectors.ts
src/js_crypto/test_vectors/: dump-test-vectors.sh  dune  legacySignatures.ts  poseidonKimchi.ts  poseidonLegacy.ts
(+3388 files in other folders)
