opam-version: "2.0"
depends: [
  "dune"
  "js_of_ocaml-ppx"
  "bin_prot"
  "ppx_bin_prot"                                                                                        
  "base"                                                                             
  "core_kernel"                                   
  "ppx_compare"
]