(executable
 (name o1js_types)
 (public_name o1js-types)
 (package o1js_bindings)
 (modules o1js_types)
 (link_flags (-linkall))
 (modes native)
 (libraries fields_derivers.zkapps mina_base yojson)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_version)))

(rule
 (targets jsLayout.json)
 (action
  (with-stdout-to
   jsLayout.json
   (run %{exe:./o1js_types.exe}))))

(executable
 (name o1js_constants)
 (public_name o1js-constants)
 (package o1js_bindings)
 (modules o1js_constants)
 (link_flags (-linkall))
 (modes native)
 (libraries
  base
  base58_check
  core_kernel
  hash_prefixes
  mina_base
  mina_signature_kind
  pickles
  protocol_version
  random_oracle
  random_oracle.permutation.ocaml
  sponge
  yojson)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_version)))
