(rule
 (targets poseidon-kimchi.ts poseidon-legacy.ts)
 (mode promote)
 (enabled_if
  (<> %{env:NO_JS_BUILD=0} 1))
 (deps
  (:script ./dump-test-vectors.sh)
  (source_tree ../../../mina/src/lib/crypto/proof-systems)
  ../../../../.prettierrc.cjs
  (glob_files ../../../../node_modules/prettier/*))
 (action
  (progn
   (run chmod -R +w ../../../mina/src/lib/crypto/proof-systems/ .)
   (run %{script} poseidon-kimchi.ts poseidon-legacy.ts))))
