(library
 (public_name o1js_bindings.lib)
 (name o1js_bindings_lib)
 (libraries
  ;; opam libraries ;;
  base
  base.caml
  core_kernel
  integers
  ppx_deriving_yojson.runtime
  sexplib0
  yojson
  ;; local libraries ;;
  base58_check
  block_time
  currency
  data_hash_lib
  fields_derivers
  fields_derivers.zkapps
  genesis_constants
  h_list
  hash_prefixes
  key_cache
  kimchi_backend
  kimchi_backend_common
  kimchi_bindings
  kimchi_pasta
  kimchi_pasta.basic
  kimchi_pasta.constraint_system
  kimchi_types
  mina_base
  mina_base.import
  mina_numbers
  mina_signature_kind
  mina_transaction
  mina_transaction_logic
  mina_wire_types
  pasta_bindings
  pickles
  pickles.backend
  pickles.limb_vector
  pickles_base
  pickles_types
  random_oracle
  random_oracle_input
  sgn
  signature_lib
  snarky.backendless
  snark_keys_header
  snark_params
  sponge
  tuple_lib
  unsigned_extended
  with_hash
  ;; js-specific libraries ;;
  bindings_js
  integers_stubs_js
  js_of_ocaml
  zarith_stubs_js
  ;; js-specific overrides ;;
  cache_dir.fake
  digestif.ocaml
  hash_prefix_create.js
  logger.fake
  mina_metrics.none
  promise.js
  promise.js_helpers
  run_in_thread.fake)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_custom_printf ppx_version js_of_ocaml-ppx)))
